[package]
name = "angea"
version = "0.0.8"
edition = "2021"

[dependencies]
libc = "0.2"
nix = { version = "0.26", default-features = false, features = ["event", "dir", "mount", "sched", "signal", "term"]}
libsystemd-sys = "0.9"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
strip = true
